<resources>
	<string name="mNum_gallexy_s_2_KT">SHW-M250K</string>
	<string name="mNum_gallexy_s_2_SK">SHW-M250S</string>
	<string name="mNum_gallexy_s_2_LTE_LG">SHV-E120L</string>
    <string name="model_number_end_upper_string_SK">S</string>
    <string name="model_number_end_upper_string_LG">L</string>
    <string name="model_number_end_lower_string_SK">s</string>
    <string name="model_number_end_lower_string_LG">l</string>
    <string name="nexus_s">Nexus S</string>
    <string name="galaxy_nexus">Galaxy Nexus</string>
    <string name="nexus_one">Nexus One</string>
    <string name="app_name">I - CARD</string>
    <string name="my_card">나의 카드</string>
    <string name="breakdown_stats">내역 통계</string>
    <string name="detail_view">사용 내역</string>
    <string name="cash">현금 사용</string>
    <string name="notice">공지사항</string>
    <string name="option">환경설정</string>
    <string name="today_payment">현재 사용 금액</string>
    <string name="monthly_show_text">월별 사용 내역 보기</string>
    <string name="category_show_text">카테고리별 사용 내역 보기</string>
    <string name="option_password_title">비밀번호 설정</string>
    <string name="option_password_description">비밀번호를 설정하여 타인에게 정보를 노출하지 않습니다.</string>
    <string name="option_csv_title">CSV파일 내보내기</string>
    <string name="option_csv_description">Excel형태의 CSV파일을 메일로 전송하여 PC에서 사용합니다.</string>
    <string name="option_theme_title">테마 설정</string>
    <string name="option_theme_description">테마를 설정하여 아이콘과 배경화면이 바뀝니다.</string>
    <string name="edit_my_card">카드 정보 수정</string>
    <string name="dash"> ~ </string>
    <string name="edit_category">카테고리 선택</string>
    <string name="terminate_string">종료</string>
    <string name="edit_string">수정</string>
    <string name="register_string">등록</string>
    <string name="cancel_string">취소</string>
    <string name="add_string">추가</string>
    <string name="identify_string">확인</string>
	<string name="add_cash_use">현금 사용 추가하기</string>
	<string name="add_card_use">카드 사용 추가하기</string>
	<string name="add_my_card">나의 카드 추가하기</string>
	<string name="delete_my_card">나의 카드 삭제</string>
	<string name="approval_string">-승인</string>
	<string name="detete_my_card_dlg_title">카드 정보 수정 및 삭제</string>
	<string name="delete_breakdown_stats_dlg_title">사용내역 정보 수정 및 삭제</string>
	<string name="delete_b_stats_edit">정보 수정 하기</string>
	<string name="delete_b_stats_delete">삭제 하기</string>
	<string name="delete_b_alert_msg">정말 삭제 하시겠습니까?</string>
	<string name="delete_edit_cash_title">현금사용 정보 수정 및 삭제</string>
	<string name="edit_cash_menu">정보 수정하기</string>
	<string name="delete_cash_menu">삭제하기</string>
	<string name="my_card_add_init_payment_day">매월 0일</string>
	<string name="my_card_add_init_card_type">신용</string>
	<string name="month_use">월 사용금액</string>
	<string name="pDay_every_month">매월&#160;</string>
	<string name="pDay_day">&#160;일</string>
	<string name="won">&#160;원</string>
	<string name="no_space_won">원</string>
	<string name="list_have_no_items">결제 내역이 없습니다.</string>
	<string name="my_card_list_have_no_items">카드가 없습니다. 추가해주세요.</string>
	<string name="cash_use_time">사용일시 :&#160;</string>
	<string name="cash_use_place">사용장소 :&#160;</string>
	<string name="cash_use_price">사용금액 :&#160;</string>
	<string name="cash_use_list_string">현금</string>
	<string name="delete_my_card_description">카드를 삭제하면 해당 카드의 사용내역도 함께 삭제 됩니다. 그래도 삭제 하시겠습니까?</string>
	<string name="delete_string">삭제</string>
	<string name="progress_bar_title">사용내역 자동 등록</string>
	<string name="progress_bar_wait">등록중입니다. 잠시만 기다려 주세요.</string>
	<string name="progress_bar_msg">현재 스마트폰에 수신되어 있는 결제 SMS를 자동 등록합니다. 등록하지 않을시에는 이후에 수신되는 결제SMS에 대해서만 등록됩니다.</string>
	<string name="invalid_input_alert_title">입력 오류!</string>
	<string name="invalid_input_alert_description">카드번호는 필수사항입니다. 다시 입력하세요.</string>
	<string name="invalid_input_alert_description_add_cash">입력이 올바르지 않습니다. 다시 입력하세요.</string>
	<string name="notification_ticker_text">I-CARD 새로운 사용내역이 도착하였습니다.</string>
	<string name="notification_text">새로운 사용내역이 등록되었습니다.</string>
	<string name="notification_title">I-CARD</string>
    <string name="edit_image">카드이미지 변경</string>
    <string name="edit_payment_day">결제일 등록</string>
    <string name="edit_t_amount">사용목표금액 등록</string>
    <string name="edit_card_type">카드종류 등록</string>
    <string name="detail_title_time">날짜</string>
    <string name="detail_title_card">카드</string>
    <string name="detail_title_place">장소</string>
    <string name="detail_title_price">금액</string>
    <string name="detail_title_category">분류</string>
    <string name="deatil_dlg_edit_card_name">카드이름 : </string>
    <string name="deatil_dlg_edit_card_number">카드번호 : </string>
    <string name="detail_dlg_approval_time">결제일시 : </string>
    <string name="detail_dlg_place">결제장소 : </string>
    <string name="detail_dlg_price">결제금액 : </string>
    <string name="detail_dlg_category">카테고리 : </string>
    <string name="detail_dlg_edit_title">상세 내역 수정</string>
    <string name="example_card_name">NH카드</string>
    <string name="example_card_number">293*</string>
    <string name="example_place">이마트</string>
    <string name="example_price">50000</string>
    <string name="example_price_2">200000</string>
    <string name="example_every_month">15</string>
    <string name="my_card_add_payment_day_title">결제일 선택</string>
    <string name="my_card_add_card_type_title">카드종류 선택</string>
    <string name="my_card_add_payment_day">결   제   일 : </string>
    <string name="my_card_add_check_or_credit">카드종류 : </string>
    <string name="my_card_add_t_amount">목표금액 : </string>
    <string name="my_card_add_card_number_digits">1234567890*-</string>
    <string name="my_card_add_target_price_digits">1234567890</string>
    <string name="c_etc">기타</string>
    <string name="c_food">주식</string>
    <string name="c_side_dish">부식</string>
    <string name="c_snack">간식</string>
    <string name="c_eat_out">외식</string>
    <string name="c_alcohol">술/유흥</string>
    <string name="c_maintenance_cost">관리비</string>
    <string name="c_utility_bills">공과금</string>
    <string name="c_mobile">이동통신</string>
    <string name="c_internet">인터넷</string>
    <string name="c_monthly_rent">월세</string>
    <string name="c_furniture">가구/가전</string>
    <string name="c_kitchen">주방/욕실</string>
    <string name="c_goods">잡화</string>
    <string name="c_consumables">소모</string>
    <string name="c_clothing">의류비</string>
    <string name="c_fashion">패션/잡화</string>
    <string name="c_hair">헤어/뷰티</string>
    <string name="c_wash_repair">세탁수선</string>
    <string name="c_leisure">운동/레져</string>
    <string name="c_culture">문화생활</string>
    <string name="c_travle">여행</string>
    <string name="c_medical">병원비</string>
    <string name="c_tuition">등록금</string>
    <string name="c_teaching_materials">학원/교재비</string>
    <string name="c_baby_goods">육아용품</string>
    <string name="c_public_transit">대중교통</string>
    <string name="c_oiling">주유비</string>
    <string name="c_dating">데이트</string>
    <string name="c_gift">선물</string>
    <string name="c_family_event">경조사비</string>
    <string name="c_meeting_fee">모임회비</string>
    <string name="c_card_pay">카드대금</string>
    <string name="kb_kookmin_baby_love">KB 국민 아이사랑 카드</string>
    <string name="kb_kookmin_emart">이마트 KB 국민 카드</string>
    <string name="kb_kookmin_good_shopping">KB 국민 굿 쇼핑 카드</string>
    <string name="kb_kookmin_goodday">KB 국민 굿데이 카드</string>
    <string name="kb_kookmin_happy_auto">KB 국민 해피 오토 카드</string>
    <string name="kb_kookmin_homeplus">KB 국민 홈플러스 카드</string>
    <string name="kb_kookmin_hyedam">KB 국민 혜담 카드</string>
    <string name="kb_kookmin_lg_uplus">LG 유플러스 국민 카드</string>
    <string name="kb_kookmin_olleh">올레 KB 국민 카드</string>
    <string name="kb_kookmin_rail_air">KB RAIL AIR 국민 카드</string>
    <string name="kb_kookmin_sk_energy_loveyou">SK 에너지 러브유 KB 국민 카드</string>
    <string name="kb_kookmin_sk_smart">SK 국민 스마트 카드</string>
    <string name="kb_kookmin_star">KB 국민 스타 카드</string>
    <string name="kb_kookmin_sweet_dream">KB 국민 스위트 드림 카드</string>
    <string name="kb_kookmin_the_cj">The CJ 국민 카드</string>
    <string name="kb_kookmin_wise_home">KB 국민 와이즈 홈 카드</string>
    <string name="kb_kookmin_wise">KB 국민 와이즈 카드</string>
    <string name="nh_chaum_card_chun">채움카드(천)</string>
    <string name="nh_chaum_check">채움 체크카드</string>
    <string name="nh_chaum">채움 스마티 카드</string>
    <string name="nh_ok_check">농협OK체크카드</string>
    <string name="nh_shoppingsave">채움 쇼핑세이브카드 </string>
    <string name="lotte_dc_supreme">DC Supreme 롯데카드</string>
    <string name="lotte_driving_pass">Driving Pass 롯데카드</string>
    <string name="lotte_lotte">롯데 롯데카드</string>
    <string name="lotte_happy_point">해피포인트 롯데체크카드</string>
    <string name="lotte_dc_sweet">DC Sweet 롯데 체크카드</string>
    <string name="woori_e">우리 E 카드</string>
    <string name="woori_green">우리 그린 카드</string>
    <string name="woori_skypass">SKYPASS 우리 V 카드</string>
    <string name="woori_v_oiling">우리 V 카드 주유형</string>
    <string name="woori_v_tiara">우리 V 카드 티아라</string>
    <string name="woori_v">우리 V 카드</string>
	<string name="samsung_2">삼성카드2</string>
    <string name="samsung_car_moa">삼성 카앤모아 카드</string>
    <string name="samsung_cjone">CJ ONE 삼성카드</string>
    <string name="samsung_costco">코스트코 삼성 카드</string>
    <string name="samsung_s_class">삼성카드 S 클래스</string>
    <string name="sinhan_4050">신한 4050 카드</string>
    <string name="sinhan_achim">신한 아침애 카드</string>
    <string name="sinhan_gscaltex">신한 GS칼텍스 샤인</string>
    <string name="sinhan_high_point">신한 하이 포인트 나노</string>
    <string name="sinhan_lady">신한 레이디 카드</string>
    <string name="sinhan_love">신한 러브 카드</string>
    <string name="sinhan_wisdom">신한 에스모아 생활의 지혜</string>
    <string name="hyundai_h3">현대 카드 H3</string>
    <string name="hyundai_m">현대 카드 M</string>
    <string name="hyundai_m3">현대카드 M3</string>
    <string name="hyundai_r3">현대카드 R3</string>
    <string name="hyundai_v">현대카드 V</string>
    <string name="hyundai_zero">현대카드 ZERO</string>
	<string name="notice_1_title">첫번째 공지사항</string>
	<string name="app_method_title">이용방법 및 설명</string>
    <string name="app_method">I-CARD를 이용해 주셔서 감사합니다. I-CARD는 결제문자를 자동으로 등록해 줍니다.
         사용내역을 기간별, 카테고리별 등으로 볼수 있으며 월별 사용내역을 그래프로 볼수 있습니다. 
         또한 현금사용도 추가할수있습니다. 카드추가는 현재 KB, NH, 롯데, 우리, 삼성, 신한, 현대카드를 할 수 있습니다.이 앱은 한성대학교 DoDream의 졸업작품입니다.
         문의사항은 gazi6024@gmail.com kokowct@hotmail.com로 보내주세요~</string>
    <string-array name="card_type_list">
        <item>신용</item>
        <item>체크</item>
    </string-array>
    <string name="just_card">카드</string>
    <string-array name="day_list">
        <item>1일</item>
        <item>2일</item>
        <item>3일</item>
        <item>4일</item>
        <item>5일</item>
        <item>6일</item>
        <item>7일</item>
        <item>8일</item>
        <item>9일</item>
        <item>10일</item>
        <item>11일</item>
        <item>12일</item>
        <item>13일</item>
        <item>14일</item>
        <item>15일</item>
        <item>16일</item>
        <item>17일</item>
        <item>18일</item>
        <item>19일</item>
        <item>20일</item>
        <item>21일</item>
        <item>22일</item>
        <item>23일</item>
        <item>24일</item>
        <item>25일</item>
        <item>26일</item>
        <item>27일</item>
        <item>28일</item>
        <item>29일</item>
        <item>30일</item>
        <item>31일</item>
    </string-array>
</resources>