<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/my_card_add_root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <!-- 카드번호 변경 뷰 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/my_card_add_card_image"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:padding="3dp" />

        <TextView
            android:id="@+id/my_card_add_card_name"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="5dp"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:singleLine="true" />
    </LinearLayout>

    <TableRow>

        <TextView
            style="@style/DetailDialogText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deatil_dlg_edit_card_number" />

        <EditText
            android:id="@+id/my_card_add_card_number"
            style="@style/DetailEditDialogText"
            android:layout_width="150dp"
            android:layout_height="39dp"
            android:hint="@string/example_card_number" />
    </TableRow>

    <!-- 결제일시 변경 뷰 -->

    <TableRow>

        <TextView
            style="@style/DetailDialogText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_card_add_payment_day" />

        <TextView
            android:id="@+id/my_card_add_payment_day"
            style="@style/DetailEditDialogText"
            android:layout_width="150dp"
            android:layout_height="39dp"
            android:text="@string/my_card_add_init_payment_day"
            android:textColor="@color/white" />
    </TableRow>

    <!-- 결제장소 변경 뷰 -->

    <TableRow>

        <TextView
            style="@style/DetailDialogText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_card_add_check_or_credit" />

        <TextView
            android:id="@+id/my_card_add_card_type"
            style="@style/DetailEditDialogText"
            android:layout_width="150dp"
            android:layout_height="39dp"
            android:text="@string/my_card_add_init_card_type"
            android:textColor="@color/white" />
    </TableRow>

    <!-- 결제금액 변경 뷰 -->

    <TableRow>

        <TextView
            style="@style/DetailDialogText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_card_add_t_amount" />

        <EditText
            android:id="@+id/my_card_add_target_price"
            style="@style/DetailEditDialogText"
            android:layout_width="150dp"
            android:layout_height="39dp"
            android:hint="@string/example_price"
            android:numeric="decimal" />
    </TableRow>

</TableLayout>